<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{8a814bb3-96b5-4f0e-a827-550052e1e8f4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	EventBuffer 					: ARRAY [1..500] OF ST_Event;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>